contact me buttons alignment

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <link href="css/theme.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/skins/tango/skin.css" />
 <link href="css/bootstrap-responsive.css" rel="stylesheet">
+<link href="css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/styles.css">
+
 <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->    
@@ -30,13 +33,19 @@
                         	<div class="logo"><a href="index.html"><img src="img/logo.png" alt="" /></a></div>                        
                         </div>
                         <div class="span8">
-                        	<div class="follow_us">
+                            <ul class="address-text">
+                                    <li><a href="https://twitter.com/esemecomedian" target="_blank" title="Twitter"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
+                                    <li><a href="https://facebook.com/eseme.comedian.5" target="_blank" title="Facebook"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+                                    <li><a href="https://instagram.com/esemecomedian" target="_blank" title="Instagram"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                                    <li><a href="https://youtube.com" target="_blank" title="YouTube"><i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a></li>                          
+                                </ul>
+                        	<!-- <div class="follow_us">
                                 <ul>
+                                    <li><a href="https://medium.com/@mugagambi/" target="_blank" title="Medium"><i class="fa fa-medium fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
                                     <li><a href="http://facebook.com/eseme.comedian.5" title="Facebook" class="facebook" aria-hidden="true" target="_blank">Facebook</a></li>
                                     <li><a href="http://twitter.com/esemecomedian" title="Twitter" class="twitter" aria-hidden="true" target="_blank">Twitter</a></li>
-                                    <li><a href="http://instagram.com/esemecomedian" title="Instagram" class="fa fa-instagram" aria-hidden="true" target="_blank">Twitter</a></li>
-
                                 </ul>
+                            -->
                             </div>
                             <div class="clear"></div>
                             <nav id="main_menu">
@@ -138,42 +147,42 @@
                             	<div class="news_date">25 July<span>2017</span></div>
                                 <div class="news_t"><a href="#">King Kaka's Style of Music</a></div>
                                 <div class="news">Posted by <a href="#">Patrick Eseme</a>  /  In <a href="#">Ghana</a><br/>Tags: <a href="#">Nairobi</a>, <a href="#">Eseme</a></div>
-                                <div class="news_info">King Kaka's style of music has been greatly influenced by the sounds of poetry over a rhythmic beat, which emerged from the inner cities and American projects. However, his impeccable craftsmanship has seen him blending this American style of music to the African folk sound, laced by lyrics that reflect the everyday struggles and triumphs of an urban youth. <a href="#">Read more...</a></div>
+                                <div class="news_info">King Kaka's style of music has been greatly influenced by the sounds of poetry over a rhythmic beat, which emerged from the inner cities and American projects. However, his impeccable craftsmanship has seen him blending this American style of music to the African folk sound, laced by lyrics that reflect the everyday struggles and triumphs of an urban youth. <a href="blog.html">Read more...</a></div>
                                 <div class="clear"></div>
                             </li>
                             <li>
                             	<div class="news_date">24 July<span>2017</span></div>
                                 <div class="news_t"><a href="#">Internet Service Providers</a></div>
                                 <div class="news">Posted by <a href="#">Brian Okinyi</a>  /  In <a href="#">Nairobi</a><br/>Tags: <a href="#">safaricom</a>, <a href="#">wifi</a></div>
-                                <div class="news_info">No matter how advanced Internet technology becomes, your business faces risks online. Consider top-shelf security essential when deciding on a provider. The best services deliver anti-spam, antivirus , anti-spyware, anti-malware, and even backup service protection in case of a system crash. If you are still creating hard copies of files, or saving them on external hard drives, consider moving to cloud storage for all workplace systems. <a href="#">Read more...</a></div>
+                                <div class="news_info">No matter how advanced Internet technology becomes, your business faces risks online. Consider top-shelf security essential when deciding on a provider. The best services deliver anti-spam, antivirus , anti-spyware, anti-malware, and even backup service protection in case of a system crash. If you are still creating hard copies of files, or saving them on external hard drives, consider moving to cloud storage for all workplace systems. <a href="blog.html">Read more...</a></div>
                                 <div class="clear"></div>
                             </li>
                             <li>
                             	<div class="news_date">01 July<span>2017</span></div>
                                 <div class="news_t"><a href="#">This is what Humprey had to say</a></div>
                                 <div class="news">Posted by <a href="#">Humprey</a>  /  In <a href="#">City</a><br/>Tags: <a href="#">webDesign</a>, <a href="#">devs</a></div>
-                                <div class="news_info">I'm a creative thinker. I like to explore alternative solutions to problems and have an open mind about what will work best. I enjoy solving problems, troubleshooting issues, and coming up with solutions in a timely manner. I really enjoy meeting and working with a lot of different people, and am known for being a great listener and clear communicator, whether I’m engaging with colleagues or employers. <a href="#">Read more...</a></div>
+                                <div class="news_info">I'm a creative thinker. I like to explore alternative solutions to problems and have an open mind about what will work best. I enjoy solving problems, troubleshooting issues, and coming up with solutions in a timely manner. I really enjoy meeting and working with a lot of different people, and am known for being a great listener and clear communicator, whether I’m engaging with colleagues or employers. <a href="blog.html">Read more...</a></div>
                                 <div class="clear"></div>
                             </li>
                             <li>
                             	<div class="news_date">29 June<span>2017</span></div>
                                 <div class="news_t"><a href="#">About internet in Kenya</a></div>
                                 <div class="news">Posted by <a href="#">Mary Wambui</a>  /  In <a href="#">Nyeri</a><br/>Tags: <a href="#">faiba</a>, <a href="#">airtel</a></div>
-                                <div class="news_info">Truth be told, your Internet connection may go down occasionally, even if your ISP tries so hard. Sometimes, as Murphy’s Law states, what can go wrong will go wrong. Thus, the importance of prompt and effective customer support from the ISP cannot be overstated. Ask potential Internet service providers about customer support. <a href="#">Read more...</a></div>
+                                <div class="news_info">Truth be told, your Internet connection may go down occasionally, even if your ISP tries so hard. Sometimes, as Murphy’s Law states, what can go wrong will go wrong. Thus, the importance of prompt and effective customer support from the ISP cannot be overstated. Ask potential Internet service providers about customer support. <a href="blog.html">Read more...</a></div>
                                 <div class="clear"></div>
                             </li>
                             <li>
                                 <div class="news_date">28 June<span>2017</span></div>
                                 <div class="news_t"><a href="#">Internet Service Providers</a></div>
                                 <div class="news">Posted by <a href="#">Brian Okinyi</a>  /  In <a href="#">Nairobi</a><br/>Tags: <a href="#">safaricom</a>, <a href="#">wifi</a></div>
-                                <div class="news_info">No matter how advanced Internet technology becomes, your business faces risks online. Consider top-shelf security essential when deciding on a provider. The best services deliver anti-spam, antivirus , anti-spyware, anti-malware, and even backup service protection in case of a system crash. If you are still creating hard copies of files, or saving them on external hard drives, consider moving to cloud storage for all workplace systems. <a href="#">Read more...</a></div>
+                                <div class="news_info">No matter how advanced Internet technology becomes, your business faces risks online. Consider top-shelf security essential when deciding on a provider. The best services deliver anti-spam, antivirus , anti-spyware, anti-malware, and even backup service protection in case of a system crash. If you are still creating hard copies of files, or saving them on external hard drives, consider moving to cloud storage for all workplace systems. <a href="blog.html">Read more...</a></div>
                                 <div class="clear"></div>
                             </li>
                             <li>
                                 <div class="news_date">27 June<span>2017</span></div>
                                 <div class="news_t"><a href="#">King Kaka's Style of Music</a></div>
                                 <div class="news">Posted by <a href="#">Patrick Eseme</a>  /  In <a href="#">Ghana</a><br/>Tags: <a href="#">Nairobi</a>, <a href="#">Eseme</a></div>
-                                <div class="news_info">King Kaka's style of music has been greatly influenced by the sounds of poetry over a rhythmic beat, which emerged from the inner cities and American projects. However, his impeccable craftsmanship has seen him blending this American style of music to the African folk sound, laced by lyrics that reflect the everyday struggles and triumphs of an urban youth. <a href="#">Read more...</a></div>
+                                <div class="news_info">King Kaka's style of music has been greatly influenced by the sounds of poetry over a rhythmic beat, which emerged from the inner cities and American projects. However, his impeccable craftsmanship has seen him blending this American style of music to the African folk sound, laced by lyrics that reflect the everyday struggles and triumphs of an urban youth. <a href="blog.html">Read more...</a></div>
                                 <div class="clear"></div>
                             </li>
                          </ul> 
@@ -264,16 +273,16 @@
     	<div class="wrap">
     		<div class="container">
             	<div class="row">
-                	<div class="span3">
+                	<div class="span6">
                     	<h2 class="title">Latest tweets</h2>
                         <div class="tweet_block"></div>                       
                     </div>
-                    <div class="span3">
+                    <div class="span6">
                     	<h2 class="title">Get in touch!</h2>
                         <form action="#" method="post">
                         	<input class="span3" type="text" name="name" id="name" value="Name" onFocus="if (this.value == 'Name') this.value = '';" onBlur="if (this.value == '') this.value = 'Name';" />
                             <input class="span3" type="text" name="email" id="email" value="Email" onFocus="if (this.value == 'Email') this.value = '';" onBlur="if (this.value == '') this.value = 'Email';" />
-                            <textarea name="message" id="message" class="span3" onFocus="if (this.value == 'Message') this.value = '';" onBlur="if (this.value == '') this.value = 'Message';" >Message</textarea>
+                            <textarea name="message" id="message" class="span6" onFocus="if (this.value == 'Message') this.value = '';" onBlur="if (this.value == '') this.value = 'Message';" >Message</textarea>
                             <div class="clear"></div>
                             <input type="reset" class="btn dark_btn" value="Clear form" />
                             <input type="submit" class="btn send_btn" value="Send!" />
@@ -305,7 +314,6 @@
                                         <li><a rel="tooltip" href="#" title="Twitter" class="twitter">Twitter</a></li>
                                         <li><a rel="tooltip" href="#" title="Tumbrl" class="tumbrl">Tumbrl</a></li>
                                         <li><a rel="tooltip" href="#" title="Vimeo" class="vimeo">Vimeo</a></li>
-                                        <li><a rel="tooltip" href="#" title="Delicious" class="delicious">Delicious</a></li>
                                     </ul>
                                 </div>
                                 <div class="clear"></div>
@@ -314,9 +322,10 @@
                             	<div class="foot_menu">
                             		<ul>
                                         <li><a href="index.html" class="current">Home</a></li>
+                                        <li class="current"><a href="#videos">Videos</a></li>
+                                        <li class="current"><a href="portfolio_3columns.html">Gallery</a></li>
+                                        <li class="current"><a href="blog.html">Blogs</a></li>
                                         <li><a href="about.html">Bio</a></li>
-                                        <li><a href="portfolio_2columns.html">Gallery</a></li>
-                                        <li><a href="blog.html">Blog</a></li>
                                         <li><a href="contacts.html">Connect</a></li>
                                     </ul>
                             	</div>
