--- a/index.html
+++ b/index.html
@@ -38,14 +38,7 @@
                                     <li><a href="https://facebook.com/eseme.comedian.5" target="_blank" title="Facebook"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
                                     <li><a href="https://instagram.com/esemecomedian" target="_blank" title="Instagram"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
                                     <li><a href="https://youtube.com" target="_blank" title="YouTube"><i class="fa fa-youtube fa-2x" aria-hidden="true"></i></a></li>                          
-                                </ul>
-                        	<!-- <div class="follow_us">
-                                <ul>
-                                    <li><a href="https://medium.com/@mugagambi/" target="_blank" title="Medium"><i class="fa fa-medium fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
-                                    <li><a href="http://facebook.com/eseme.comedian.5" title="Facebook" class="facebook" aria-hidden="true" target="_blank">Facebook</a></li>
-                                    <li><a href="http://twitter.com/esemecomedian" title="Twitter" class="twitter" aria-hidden="true" target="_blank">Twitter</a></li>
-                                </ul>
-                            -->
+                            </ul>
                             </div>
                             <div class="clear"></div>
                             <nav id="main_menu">
@@ -280,7 +273,7 @@
                     <div class="span6">
                     	<h2 class="title">Get in touch!</h2>
                         <form action="#" method="post">
-                        	<input class="span3" type="text" name="name" id="name" value="Name" onFocus="if (this.value == 'Name') this.value = '';" onBlur="if (this.value == '') this.value = 'Name';" />
+                        	<input class="span3" type="text" name="name" id="name" value="Name" onFocus="if (this.value == 'Name') this.value = '';" onBlur="if (this.value == '') this.value = 'Name';" />s
                             <input class="span3" type="text" name="email" id="email" value="Email" onFocus="if (this.value == 'Email') this.value = '';" onBlur="if (this.value == '') this.value = 'Email';" />
                             <textarea name="message" id="message" class="span6" onFocus="if (this.value == 'Message') this.value = '';" onBlur="if (this.value == '') this.value = 'Message';" >Message</textarea>
                             <div class="clear"></div>
