added php send mail script

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                                       <li class="current"><a href="#videos">Videos</a></li>
                                       <li class="current"><a href="portfolio_3columns.html">Gallery</a></li>
                                       <li class="current"><a href="blog.html">Blogs</a></li>
-                                      <li><a href="about.html">Bio</a></li>
-                                      <li><a href="contacts.html">Connect</a></li>
+                                      <li class="current"><a href="about.html">Bio</a></li>
+                                      <li class="current"><a href="contacts.html">Connect</a></li>
                                     </ul>
                                 </div>
                              </nav>                            
@@ -70,7 +70,10 @@
             <div class="camera_wrap" id="camera_wrap_1">
                 <div data-src="img/slider/1.jpg"></div>
                 <div data-src="img/slider/2.jpg"></div>
-                <div data-src="img/slider/3.jpg"></div>                                        
+                <div data-src="img/slider/3.jpg"></div> 
+                <div data-src="img/slider/4.jpg"></div>
+                <div data-src="img/slider/5.jpg"></div>
+                <div data-src="img/slider/6.jpg"></div>                                     
             </div><!-- #camera_wrap_1 -->
             <div class="clear"></div>	
         </div>        
@@ -274,7 +277,7 @@
                     </div>
                     <div class="span6">
                     	<h2 class="title">Get in touch!</h2>
-                        <form action="#" method="post">
+                        <form action="php/send_form_email.php" method="post">
                         	<input class="user-texts" type="text" name="name" id="name" value="Name" onFocus="if (this.value == 'Name') this.value = '';" onBlur="if (this.value == '') this.value = 'Name';" />
                             <input class="user-texts" type="text" name="email" id="email" value="Email" onFocus="if (this.value == 'Email') this.value = '';" onBlur="if (this.value == '') this.value = 'Email';" />
                             <textarea name="message" id="message" class="span6" onFocus="if (this.value == 'Message') this.value = '';" onBlur="if (this.value == '') this.value = 'Message';" >Message</textarea>
@@ -319,8 +322,8 @@
                                         <li class="current"><a href="#videos">Videos</a></li>
                                         <li class="current"><a href="portfolio_3columns.html">Gallery</a></li>
                                         <li class="current"><a href="blog.html">Blogs</a></li>
-                                        <li><a href="about.html">Bio</a></li>
-                                        <li><a href="contacts.html">Connect</a></li>
+                                        <li class="current"><a href="about.html">Bio</a></li>
+                                        <li class="current"><a href="contacts.html">Connect</a></li>
                                     </ul>
                             	</div>
                             </div>                            
