--- a/about.html
+++ b/about.html
@@ -18,6 +18,9 @@
 <link href="css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 
+<!-- add icon -->
+<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+
 <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->    
