--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <link href="css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 
+<!-- add icon -->
+<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+
 <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->    
@@ -333,7 +336,8 @@
             </div>
         </div>
     </div>
-    <!--//footer-->    
+    <!--//footer-->
+    <a class="scrolltop" href="#"><span class="fa fa-angle-up"></span></a>   
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
@@ -354,6 +358,8 @@
 			$('#mycarousel, #mycarousel2, #newscarousel').jcarousel();													
 		});		
 	</script>
+    <!-- Custom scroll up script-->
+    <script src="js/custom.js"></script>
 </body>
 </html>
 
